bunch of changes a while ago, but forgot which ones

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,7 +4,7 @@
 ##  symlink:  ~/                                     ##
 ##  purpose:  ansible configuration                  ##
 ##  version:  03/15/2015                             ##
-##  repo:     https://github.com/WebAppNut/dotfiles  ##
+##  repo:     https://github.com/DevOpsEtc/dotfiles  ##
 #######################################################
 
 # nearly all parameters can be overridden in ansible-playbook
