--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,7 @@
   ##  symlink:  ~/                                     ##
   ##  purpose:  tmux config                            ##
   ##  date:     10/22/2015                             ##
-  ##  repo:     https://github.com/WebAppNut/dotfiles  ##
+  ##  repo:     https://github.com/DevOpsEtc/dotfiles  ##
   #######################################################
 
 # vim: set fdm=marker:                        # treat triple braces as folds
